--- a/picom.conf
+++ b/picom.conf
@@ -11,11 +11,11 @@
 # https://github.com/chjj/compton/wiki/vsync-guide
 
 #backend = "glx";
-paint-on-overlay = true;
-glx-no-stencil = true;
+paint-on-overlay = false;
+glx-no-stencil = false;
 glx-no-rebind-pixmap = true;
 unredir-if-possible = true;
-#vsync = true; 
+vsync = false; 
 
 
 # --- Shadows (Disable with shadow = false;)
